# cranial-messaging

./: .gitignore  README.rst  cranial.rdf  cranial.ttl  pyproject.toml  pytest.ini  requirements.txt  setup.py
cranial/: fetcher.py  fetchers.py  generate.py  pipe.py  relay.py  scripts.py  test_messaging_listeners.py
cranial/cli/service_template/: cookiecutter.json
cranial/cli/service_template/hooks/: post_gen_project.sh  pre_gen_project.py
cranial/cli/service_template/{{cookiecutter.project_name}}/: {{ cookiecutter.project_name|lower|replace(' ', '-') }}_service.py
cranial/common/: __init__.py  config.py  logger.py  serialize.py  utils.py
cranial/connectors/: __init__.py  base.py  file.py  googlecloudstorage.py  http_connector.py  local.py  s3.py
cranial/datastore/: dbapi.py
cranial/datastore/adapters/: cassandra.py  psql.py
cranial/fetchers/: __init__.py  connector.py  fetcher.py  googlecloudstorage.py  http.py  local.py  s3.py
cranial/fetchers/tests/: test_connector.py  test_local.py
cranial/keyvalue/: README.rst  __init__.py  interceptor.py  keyvalue.py  kvandra.py
cranial/listeners/: __init__.py  base.py  db.py  file.py  kafka.py  postgresql.py  stdin.py  zmq.py
cranial/messaging/: README.rst  __init__.py  base.py  celery.py  file.py  firehose.py  httpget.py  httppost.py  httpspost.py  kafka.py  localdisk.py  s3.py  stdout.py  zmq.py
cranial/messaging/adapters/: firehose.py  firehose_async.py  kafka.py  zmq.py
cranial/messaging/test/: test_coordinator.py
cranial/servicediscovery/: base.py  echo.py  marathon.py
ontology/: cranial.rdf  cranial.ttl
tests/: test_connector.py  test_local.py  test_messaging_listeners.py
