[tool.poetry]
name = "cranial-messaging"
version = "0.4.0.dev4"
description = "Abstractions for high-level communication between micro-services."
authors = ["Matt Chapman et al. <Matt@NinjitsuWeb.com>"]
license = "GPL-3.0+"
repository = "https://github.com/tribune/cranial-messaging"
packages = [
    { include = "cranial" }
]

[tool.poetry.dependencies]
python = ">=3.6"
boto3 = "^1.9"
cachetools = "^3.1.1"
cranial-common = ">=0.3.0"
cranial-datastore = "^0.3.3"
docopt = "^0.6.2"
psycopg2 = "^2.6.2"
pyyaml = "^5.1"
smart_open = "^1.8.3"
recordclass = "^0.11.1"
requests-futures = "^0.9.7"
ujson = "^1.3.5"
zmq = "^0.0.0"



[tool.poetry.dev-dependencies]
pytest = ">=3.2"
