[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "cranial-messaging"
version = "0.5.2"
description = "Abstractions for high-level communication between data stores, message brokers, and micro-services."
authors = ["Matt Chapman et al. <Matt@NinjitsuWeb.com>"]
license = "GPL-3.0+"
repository = "https://github.com/tribune/cranial-messaging"
packages = [
    { include = "cranial" }
]

[tool.poetry.dependencies]
python = ">=3.6"
boto3 = "^1.9"
cachetools = "^3.1.1"
docopt = "^0.6.2"
psycopg2-binary = "^2.6.2"
pyyaml = "^5.1"
recordclass = "^0.11.1"
requests = "^2.21"
requests-futures = "^1.0.0"
smart_open = "^1.8.3"
ujson = "^1.3.5"
zmq = "^0.0.0"

[tool.poetry.dev-dependencies]
tox = "^3.7"
pytest = "^4.3"
poetry = ">=0.12.16"
google-cloud-storage = "^1.16.1"
cassandra-driver = "^3.18.0"
aioetcd3 = "^1.10"
confluent-kafka = "^1.0.1"
celery = {version = "^4.3", optional = true}

[tool.poetry.extras]
kafka = ["confluent_kafka"]
cel = ["celery"]

[tool.poetry.scripts]
cranial = 'cranial.scripts:cranial'

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py36, py37

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v --extras "cel kafka"
    poetry run pytest --doctest-modules cranial
"""
